add empty models files and folder

--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipdb = "0.13.9"
 flask = "*"
-flask-sqlalchemy = "3.0.3"
-Werkzeug = "2.2.2"
+flask-sqlalchemy = "*"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
+jsonify = "*"
 flask-restful = "*"
-flask-cors = "*"
+ipdb = "*"
 faker = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+flask-bcrypt = "*"
+python-dotenv = "*"
+flask-jwt-extended = "*"
+flask-smorest = "*"
 
 [requires]
 python_full_version = "3.8.13"
