--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ flask-bcrypt = "*"
 python-dotenv = "*"
 flask-jwt-extended = "*"
 flask-smorest = "*"
+google-auth = "*"
 
 [requires]
 python_full_version = "3.8.13"
