add gauth and some frontend

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ python-dotenv = "*"
 flask-jwt-extended = "*"
 flask-smorest = "*"
 google-auth = "*"
+requests = "*"
 
 [requires]
 python_full_version = "3.8.13"
